<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"

    tools:context=".AboutActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:id="@+id/about_app_name"
            android:textStyle="bold"
            android:textSize="@dimen/sixteen_sp"
            android:gravity="center_horizontal" />


        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Version 1.0"
            android:textSize="@dimen/sixteen_sp"
            android:gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:textStyle="bold"
            android:id="@+id/about_app_version"
            android:layout_below="@+id/about_app_name" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sixteen_sp"
            android:layout_marginTop="@dimen/eight_dp"
            android:text="@string/about_app_description"
            android:id="@+id/about_app_description"
            android:layout_below="@+id/about_app_version" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sixteen_sp"
            android:layout_marginTop="@dimen/eight_dp"
            android:text="@string/about_app_developers"
            android:id="@+id/about_app_developers"
            android:layout_below="@+id/about_app_description" />



        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/copyright"
            android:id="@+id/about_app_copright"
            android:textSize="@dimen/sixteen_sp"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:layout_alignParentBottom="true"
            android:gravity="center_horizontal" />
    </LinearLayout>

</ScrollView>
